--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         {
             "name": "Adriano Rosa",
             "email": "dev@adrianorosa.com",
-            "homepage": "http://adrianorosa.com"
+            "homepage": "https://adrianorosa.com"
         }
     ],
 
